--- a/src/main/resources/public/main.css
+++ b/src/main/resources/public/main.css
@@ -1,7 +1,7 @@
 body {
   margin: 5vh 30vw;
   font-family: Lato, sans-serif;
-  font-weight: 300;
+  font-weight: 500;
 }
 
 h1 {
@@ -12,6 +12,21 @@ h2 {
  font-weight: 300;
 }
 
+table {
+    width: 100%;
+}
+
+tr:nth-child(even) {background-color: #f2f2f2}
+
+th, td {
+    padding: 15px;
+    text-align: center;
+}
+
+th {
+    background-color: #2E9AFE;
+    color: white;
+}
 
 footer {
   position: absolute;
